Fix Fourier lab link path after Tools -> Labs rename

--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 
             <!-- Footer with button + caption -->
             <div class="flex flex-wrap items-center gap-3 px-4 py-3 border-t border-zinc-800 bg-zinc-950/70">
-                <a href="Labs/fourier.html" target="_blank" rel="noreferrer"
-                    class="inline-flex items-center px-4 py-2 rounded-2xl bg-white/10 hover:bg-white/20 text-sm transition">
-                    Open Fourier Winding Lab
-                    <span class="ml-2 text-xs opacity-70">(new tab)</span>
+                <a href="Labs/vibration/bearings/fourier.html" target="_blank" rel="noopener noreferrer"
+                    class="lab-btn">
+                    Open Fourier Winding Lab <span class="text-xs opacity-70">(new tab)</span>
                 </a>
+
                 <p class="text-xs text-zinc-500">
                     Explore how complex exponentials build the Fourier transform. Includes presets, step-by-step mode,
                     and a case study for vibration analysis.
