--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <!-- Footer with button + caption -->
             <div class="flex flex-wrap items-center gap-3 px-4 py-3 border-t border-zinc-800 bg-zinc-950/70">
-                <a href="Labs/fourier.html" target="_blank" rel="noopener noreferrer" class="lab-btn">
+                <a href="labs/fourier.html" target="_blank" rel="noopener noreferrer" class="lab-btn">
                     Open Fourier Winding Lab <span class="text-xs opacity-70">(new tab)</span>
                 </a>
                 <p class="text-xs text-zinc-500">
