Correcting portfolio description.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
             background: rgba(255, 255, 255, .06);
             border: 1px solid rgba(255, 255, 255, .12);
         }
+
+        .lab-btn {
+            font-size: 13px;
+            padding: 8px 14px;
+            border-radius: 999px;
+            border: 1px solid #3b3b3b;
+            background: #222;
+            color: #eee;
+            cursor: pointer;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            transition: background .15s ease, border-color .15s ease, box-shadow .15s ease;
+        }
+
+        .lab-btn:hover {
+            background: #2c2c2c;
+            border-color: #7fffd4;
+            box-shadow: 0 0 12px rgba(127, 255, 212, 0.25);
+        }
     </style>
 </head>
 
@@ -63,7 +83,8 @@
     <section id="home" class="mx-auto max-w-6xl px-4 py-16 md:py-24">
         <div class="grid md:grid-cols-5 gap-10 items-center">
             <div class="md:col-span-3">
-                <p class="text-xs uppercase tracking-[0.2em] text-zinc-400">DCS · Ovation · ICS Networking</p>
+                <p class="text-xs uppercase tracking-[0.2em] text-zinc-400">Mechanical Engineering · DCSs/SCADA · ICS
+                    Networking</p>
                 <h1 class="mt-3 text-3xl md:text-5xl font-bold leading-tight">
                     Industrial Automation Engineer building tools for real-world control systems troubleshooting
                 </h1>
@@ -71,7 +92,8 @@
                     Results-oriented DCS/Industrial Automation Engineer with experience across power generation and
                     water
                     treatment plants. I combine
-                    <span class="font-semibold">Ovation DCS, ICS networking, and protocol troubleshooting</span>
+                    <span class="font-semibold"> my mechanical engineering knowledge, DCS troubleshooting experience,
+                        ICS networking and datalinking knowledge</span>
                     with custom tools in C#, Lua, JavaScript, and Python to make control systems more transparent,
                     diagnosable, and resilient.
                 </p>
